--- a/web/src/app.module.scss
+++ b/web/src/app.module.scss
@@ -36,6 +36,7 @@
   --app-accent-green: #0ccb93;
   --app-modal-overlay: rgba(0, 0, 0, 0.2);
   --app-modal-bg: #fff;
+  --app-err-color: #cd9089;
 
   // Header
   --header-tab-text-colour: #3c3c3c;
@@ -44,6 +45,7 @@
 
   // Forms
   --form-field-bg: #ebebeb;
+  --form-group-bg: #ebebeb;
   --form-field-text-colour: #4d4d4d;
 
   // Syntax highlighting
@@ -64,6 +66,7 @@
     --app-accent-green: #1b9873;
     --app-modal-overlay: rgba(0, 0, 0, 0.5);
     --app-modal-bg: #242424;
+    --app-err-color: #a56c65;
 
     // Header
     --header-tab-text-colour: #f7f7f7;
@@ -72,6 +75,7 @@
 
     // Forms
     --form-field-bg: #141414;
+    --form-group-bg: #2e2e2e;
     --form-field-text-colour: #f7f7f7;
 
     // Syntax highlighting
